--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="linear_layout_padding">8dp</dimen>
+    <dimen name="image_height">200dp</dimen>
+    <dimen name="tv_padding_left">8dp</dimen>
 </resources>
